--- a/styles.css
+++ b/styles.css
@@ -4,31 +4,12 @@
 }
 header{
     background-color: rgb(150, 164, 121);
-    padding: 30px 20px;
-    text-align: center;
-    
+    padding: 20px 20px;
+    height: 140px;
 }
 body{
  background-color: beige;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-.title{
-    font-family: "Vainilla";
-    font-weight: bold;
-    color: #fffef5;
-    font-size: 72px;
-    letter-spacing: 2px;
-    margin-top: -5px;
-}
-.subtitle{
-    text-align: center;
-    color: rgb(104, 90, 82);
-    font-size: 30px;
-    margin-top: -23px;
-    font-family: "Vainilla";
-}
-.bienvenido{
-    float: left;
 }
 h2{
     color: rgb(172, 110, 84);
@@ -36,8 +17,54 @@ h2{
     margin-right: 20px;
 }
 p{
+    font-weight: 30px;
+    font-size: 15px;
+}
+.title{
+    text-align: center;
+    font-family: "Vainilla";
+    color: #f5e7ba;
+    font-size: 80px;
+    letter-spacing: 2px;
     margin-top: -5px;
+    margin-left: 130px;
+}
+.subtitle{
+    text-align: center;
+    font-family: "Vainilla";
+    color: rgb(104, 90, 82);
+    font-size: 50px;
+    margin-top: -45px;
+    margin-left: 130px;
+}
+.logo{
+    float: right;
+    margin-top: -37px;
+    margin-right: 100px;
+}
+
+.bienvenido{
+    float: left;
+}
+.margen{
     margin-left: 20px;
     margin-right: 20px;
-    font-size: 25px;
 }
+
+/*navegacion en horizontal*/
+nav ul {
+    list-style: none; 
+    display: flex;
+    gap: 20px; 
+  }
+
+  nav a {
+    text-decoration: none;
+    color: #413737;
+    font-weight: 500;
+    padding: 10px 15px;
+  }
+  nav a:hover {
+    background-color: #f0f0f0;
+    color: #3f5e43;
+  }
