--- a/styles.css
+++ b/styles.css
@@ -52,10 +52,19 @@ p{
 }
 
 /*navegacion en horizontal*/
+nav{
+    background-color: rgb(150, 164, 121);
+    padding: 2px;;
+}
+nav h2{
+    color: #494440;
+   
+}
 nav ul {
     list-style: none; 
     display: flex;
     gap: 20px; 
+    align-items: center;
   }
 
   nav a {
@@ -68,3 +77,7 @@ nav ul {
     background-color: #f0f0f0;
     color: #3f5e43;
   }
+.producto{
+    display: flex;
+    gap: 30px;
+}
