--- a/styles.css
+++ b/styles.css
@@ -2,19 +2,30 @@
     font-family: "Vainilla";
     src: url(recurs/vainilla.ttf);
 }
+
+::selection{
+    background-color: rgb(172, 110, 84);
+    color: white;
+}
 header{
     background-color: rgb(150, 164, 121);
     padding: 20px 20px;
     height: 140px;
 }
+main{
+    margin-left: 20px;
+    margin-right: 20px;
+}
 body{
- background-color: beige;
- font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: beige;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 h2{
     color: rgb(172, 110, 84);
-    margin-left: 20px;
-    margin-right: 20px;
+    font-family: 'Vainilla';
+    font-size: 45px;
+    font-weight: 100;
+    letter-spacing: 2px;
 }
 p{
     font-weight: 30px;
@@ -58,6 +69,8 @@ nav{
 }
 nav h2{
     color: #494440;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 25px;
    
 }
 nav ul {
@@ -77,7 +90,29 @@ nav ul {
     background-color: #f0f0f0;
     color: #3f5e43;
   }
+
+
 .producto{
     display: flex;
+    flex-shrink: 20px;
     gap: 30px;
+}
+
+.producto header{
+    text-decoration: none;
+    min-width: 100px; 
+    max-width: 100px;
+    background-color: rgb(150, 164, 121); 
+    padding: 10px;
+    text-align: center;
+    border-radius: 10px;
+    align-content: center;
+    font-style: italic;
+    height: 100px;
+    font-weight: 100;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 13px;
+}
+.producto p{
+    text-align: justify;
 }
