--- a/styles.css
+++ b/styles.css
@@ -82,8 +82,29 @@ nav a:hover {
 }
 .producto{
     display: flex;
+    flex-shrink: 20px;
     gap: 30px;
 }
+
+.producto header{
+    text-decoration: none;
+    min-width: 100px; 
+    max-width: 100px;
+    background-color: rgb(150, 164, 121); 
+    padding: 10px;
+    text-align: center;
+    border-radius: 10px;
+    align-content: center;
+    font-style: italic;
+    height: 100px;
+    font-weight: 100;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 13px;
+}
+.producto p{
+    text-align: justify;
+}
+
 input{
   width: 60px;  
   padding: 18px;
