--- a/styles.css
+++ b/styles.css
@@ -134,6 +134,30 @@ p{
     font-size: 25px;
     margin-bottom: 0;
 }
+#boton{
+    background-color: #f4e6a1;
+    padding: 5px;
+    height: 50px;
+    width: 80px;
+    border-radius: 5px;
+    border: #3f465e;
+    font-family: "Vainilla";
+    color: #45391b;
+    font-size: 20px;
+    box-shadow: 0px 5px 20px rgb(176, 174, 174);
+    transition: all 0.1s ease;
+    box-shadow: 0 4px 6px rgba(0,0,0,0.2);
+}
+
+#button:hover {
+    transform: translateY(-1px);
+    box-shadow: 0 5px 8px rgba(0,0,0,0.25);
+}
+
+#button:active {
+    transform: translateY(2px) scale(0.98);
+    box-shadow: 0 2px 3px rgba(0,0,0,0.15);
+}
 
 .img{
     float: right;
