--- a/styles.css
+++ b/styles.css
@@ -175,28 +175,40 @@ footer p{
 }
 
 /*Sección de productos*/
+.contenedor-productos{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+
+}
 .producto{
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
     flex-shrink: 20px;
     gap: 30px;
-    height: 140px;
+    padding: 10px;
+    margin: 10px;
+}
+.producto:hover{
+    background-color: rgb(252, 252, 230);
+    border-radius: 10px;
 }
 .producto header{
     text-decoration: none;
     min-width: 100px; 
-    max-width: 100px;
+    height: 30px;
     background-color: rgb(150, 164, 121); 
     padding: 10px;
     text-align: center;
     border-radius: 10px;
     align-content: center;
     font-style: italic;
-    height: 100px;
+    
     font-weight: 150;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 13px;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 .producto p{
     text-align: justify;
@@ -211,10 +223,45 @@ header h3{
     display: flex;
     align-items: center;
 }
+.item{
+    width: 200px;
+    height: 200px;
+    border-radius: 10PX;
+}
 .item:hover{
     transform: scale(1.2);
     transition: all .3s;
 }
+.anadir-carrito{
+    display: inline-flex;
+    align-items: center;
+}
+.anadir-carrito p{
+    padding-right: 30px;
+    font-weight: 700;
+    font-size: 20px;
+    color: #3f5e43;
+}
+.carrito{
+    background-color:rgb(192, 192, 192);
+    border-color: rgb(150, 164, 121);
+    border-radius: 100px;
+    font-family: Arial, Helvetica, sans-serif;  
+    font-weight: 700; 
+
+    padding: 13px;
+    height: 20px;
+    width: 40px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.carrito:hover{
+    background-color: #505350;
+    color: #d5dada;
+}
+
 
 /*Carrito*/
 .icon-car{
@@ -224,18 +271,7 @@ header h3{
 .icon-car:hover{
     cursor: pointer;
 }
-.carrito{
-    background-color:rgb(150, 164, 121);
-    border-color: #d5dada;
-    border-radius: 15px;
-    font-family: Arial, Helvetica, sans-serif;   
-    width: 130px;
-    align-self: center;
-}
-.carrito:hover{
-    background-color: #3f5e43;
-    color: #d5dada;
-}
+
 .contenedor-general-carro{
     position: relative; 
     font-size: 15px;
