--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,8 @@ header{
 body{
  background-color: beige;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
- margin: 0px;
+ margin: 0;
+ padding: 0;
 }
 p{
     font-weight: 30px;
@@ -28,7 +29,8 @@ p{
     letter-spacing: 2px;
     margin: 0;
     margin-left: 5px;
-    margin-top: 50px;
+    margin-top: 60px;
+    margin-bottom: 20px;
 }
 
 .subtitle{
@@ -44,6 +46,11 @@ p{
 }
 .gatito{
     margin-top: 100px;
+}
+.adop{
+    float: left;
+    margin-right:30px;
+    margin-left: 350px;
 }
 
 .bienvenido{
@@ -149,15 +156,20 @@ p{
     padding: 15px;
     border-radius: 5px;
     padding-top: 2px;
-    margin: 0px;    
+    padding-bottom: 35px;
+    margin: 0 auto;   
 }
 .adopcion h3{
-    color: #46511f;
+    margin-top: 30px;
+    color: #646951;
+    margin-left: 100px;
+    font-size: 45px;
 }
 .adopcion p{
-    color: #413737;
-    font-size: 25px;
-    margin-bottom: 0;
+    color: #5b3a3a;
+    font-size: 35px;
+    margin-left: 350px;
+    margin-right: 300px;
 }
 #boton{
     background-color: #f4e6a1;
@@ -191,15 +203,18 @@ p{
     margin-right: 2px;
 }
 main{
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-top: -130px;
+    margin-left: 0px;
+    margin-right: 0px;
 }
 
 nav{
-    padding: 2px;;
+    padding: 2px;
     border-radius: 20px;
-    margin-top: -50px;
+    margin-top: -10px;
     margin-left: 70px;
+    font-size: 28px;
+    font-family: "Vainilla";
 }
 nav ul {
     list-style: none; 
