--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 }
 header{
     padding: 20px 40px;
-    height: 140px;
+    height: 150px;
 
     display: flex;
     align-items: center;      
@@ -14,10 +14,10 @@ header{
 }
 
 body{
- background-color: beige;
- font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
- margin: 0;
- padding: 0;
+    background-color: beige;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin: 0;
+    padding: 0;
 }
 p{
     font-weight: 30px;
@@ -28,13 +28,8 @@ p{
     color: #df8f33;
     font-size: 70px;
     letter-spacing: 2px;
-    margin: 0;
-    margin-left: 5px;
-    margin-top: 60px;
+    margin-top: 100px;
     margin-bottom: 20px;
-
-    
-    line-height: 1;
 }
 
 .subtitle{
@@ -43,9 +38,6 @@ p{
     font-size: 40px;
     margin-top: -10px;
     text-align: center;
-}
-.logo{
-    width: 90px;
 }
 .gatito{
     margin-top: 100px;
@@ -210,14 +202,15 @@ main{
     padding-top: 130px;
 }
 
+
 nav{
     padding: 2px;
     border-radius: 20px;
     margin-top: -10px;
-    margin-left: 70px;
-    font-size: 28px;
+    font-size: 25px;
     font-family: "Vainilla";
     position: relative;
+    margin-right: 10px;
 }
 nav ul {
     list-style: none; 
@@ -542,6 +535,7 @@ a:hover{
     cursor: pointer;
     margin-top: 10px;
     transition: background-color 0.3s;
+    font-family: "Vainilla";
 }
 
 .promo-btn:hover {
