--- a/styles.css
+++ b/styles.css
@@ -28,10 +28,9 @@ p{
     color: #df8f33;
     font-size: 70px;
     letter-spacing: 2px;
-    margin-top: 100px;
+    margin-top: 40px;
     margin-bottom: 20px;
 }
-
 .subtitle{
     font-family: "Vainilla";
     color: rgb(104, 90, 82);
@@ -39,6 +38,56 @@ p{
     margin-top: -10px;
     text-align: center;
 }
+.local{
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 50px 20px;
+    text-align: justify;
+}
+
+.texto h2{
+    font-size: 32px;
+    color: #3f2a1d;
+    letter-spacing: 2px;
+    margin-bottom: 8px;
+    font-family: "Vainilla";
+    margin-left: 30px;
+    margin-right: 30px;
+}
+.texto p{
+    font-size: 20px;
+    color: #7d5e4d;
+    margin-bottom: 30px;
+    font-family: "Vainilla";
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+.gridImagen{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+}
+
+.gridImagen img{
+    width: 100%;
+    aspect-ratio: 1 / 1;
+    object-fit: cover;
+    border-radius: 16px;
+}
+
+@media (max-width: 900px){
+    .gridImagen{
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 480px){
+    .gridImagen{
+        grid-template-columns: 1fr;
+    }
+}
+
 .gatito{
     margin-top: 100px;
 }
@@ -106,46 +155,85 @@ p{
     font-size: 28px;
     margin: 0;
 }
-.contenedorInt{
+.contenedorInt {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    gap: 0px;
-    background-color: #f6efd0;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 40px;
+    background-color: #f2edca;
+    padding: 60px;
+    justify-items: center;
 }
-.seccion2{
-    background-color:rgb(129, 166, 145);
-    padding: 5px;
-    border-radius: 10px;
+
+.seccion2 {
+    background-color: rgb(87, 157, 118);
+    padding: 25px;
+    border-radius: 20px;
     box-shadow: 0px 5px 20px rgb(176, 174, 174);
-    width: auto;
+    width: 320px;
+    height: 520px;
     color: #5c504b;
-    margin-bottom: 2px;
-    align-content: center;
-    justify-content: center;
-    text-align: center;
-    margin-left: 20px;
-    margin-top: 100px;
-    margin-right: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: justify;
+
 }
-.seccion2 img{
-    border-radius: 10px;
+
+.seccion2 img {
+    width: 100%;
+    height: 220px;
+    object-fit: cover;
+    border-radius: 15px;
 }
-.seccion2 h3{
-    color: #eed7c2;
-    font-size: 40px;
+
+.seccion2 h3 {
+    color: #413021;
+    font-size: 36px;
     font-family: "Vainilla";
+    margin: 150px 0 4px 0;
+    margin-top: -50px;
+    text-align: center;
 }
-.seccion2 p{
-    color: #413737;
+.seccion2 h4 {
+    color: #574332;
+    font-size: 20px;
+    font-family: "Vainilla";
+    margin: 15px 0 5px 0;
+    margin-top: -60px;
+    margin-left: 30px;
+}
+
+.seccion2 p {
+    color: #e7d9c4;
     font-family: "Vainilla";
     font-size: 20px;
+    margin: 5px 0;
+    margin-top: -90px;
+    margin-left: 30px;
 }
+
+.seccion2 button {
+    background-color: #52987b;
+    border: none;
+    padding: 10px 25px;
+    border-radius: 10px;
+    font-family: "Vainilla";
+    font-size: 18px;
+    cursor: pointer;
+    margin-top: -50px;
+    align-self: center;
+}
+
+.seccion2:hover {
+    transform: translateY(-5px);
+    transition: 0.3s;
+}
+
 .gatito{
     margin-top: 10px;
 }
 .adopcion{
-    background-color: rgb(227, 184, 105);
+    background-color: rgb(231, 172, 65);
     font-family: "Vainilla";
     font-size: 20px;
     padding: 15px;
@@ -167,14 +255,14 @@ p{
     margin-right: 300px;
 }
 #boton{
-    background-color: #f4e6a1;
+    background-color: hsl(31, 59%, 60%);
     padding: 5px;
     height: 50px;
     width: 80px;
     border-radius: 5px;
     border: #3f465e;
     font-family: "Vainilla";
-    color: #45391b;
+    color: #dfd9c9;
     font-size: 20px;
     box-shadow: 0px 5px 20px rgb(176, 174, 174);
     transition: all 0.1s ease;
