--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 @font-face{
     font-family: "Vainilla";
-    src: url(recurs/vainilla\ .ttf);
+    src: url(recurs/vainilla.ttf);
 }
 header{
     padding: 20px 40px;
