--- a/styles.css
+++ b/styles.css
@@ -522,6 +522,24 @@ header h3{
     transform: scale(1.2);
     transition: all .3s;
 }
+.modal-content {
+    position: relative;
+    z-index: 10;
+}
+
+.img-modal {
+    position: relative;
+    z-index: 1;
+}
+
+#btnListo {
+    position: relative;
+    z-index: 20;
+    padding: 12px 25px;
+    font-size: 18px;
+    cursor: pointer;
+}
+
 .anadir-carrito{
     display: inline-flex;
     align-items: center;
